Ansible/manifests/4k-be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: be
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
